login and check.jsp

--- a/web01/WebContent/login.html
+++ b/web01/WebContent/login.html
@@ -4,7 +4,13 @@
 <meta charset="UTF-8">
 <title>Insert title here</title>
 </head>
-<body>
-로그인 화면입니다. 하하
+<body> <!--  꺽쇠를 tag -->
+로그인 화면입니다. 하하 <br>
+<!-- 로그인 정보를 입력할 수 있는 화면 -->
+<form action="Check.jsp">
+아이디 : <input name="id"> <br>
+패스워드 : <input name="pw"> <br>
+<button>로그인</button>
+</form>
 </body>
 </html>
